Update section titles for forward and reverse conversion

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="status" id="status">Loading Pyodide…</div>
 
   <div class="section" id="forward-section">
-    <h2>Forward: Latin → Symbol Alphabet</h2>
+    <h2>Forward: Latin → Kolanyian</h2>
     <label class="small" for="forward-input">Enter Latin text (will match digraphs CH and SH first, case-insensitive):</label>
     <textarea id="forward-input" placeholder="Type or paste Latin text here...">Hello, world!</textarea>
     <div class="controls">
@@ -35,7 +35,7 @@
   </div>
 
   <div class="section" id="reverse-section">
-    <h2>Reverse: Symbol → Latin Alphabet</h2>
+    <h2>Reverse: Kolanyian → Latin</h2>
     <label class="small" for="reverse-input">Enter symbol-text (the special-symbol alphabet):</label>
     <textarea id="reverse-input" placeholder="Paste converted symbol text here..."></textarea>
     <div class="controls">
