Update label text for reverse input section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <div class="section" id="reverse-section">
     <h2>Reverse: Kolanyian → Latin</h2>
-    <label class="small" for="reverse-input">Enter symbol-text (the special-symbol alphabet):</label>
+    <label class="small" for="reverse-input">Enter Kolanyian text:</label>
     <textarea id="reverse-input" placeholder="Paste converted symbol text here..."></textarea>
     <div class="controls">
       <button id="reverse-run">Run Reverse Conversion</button>
